--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "daisyui": "^2.51.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.0",
     "react-hook-form": "^7.43.9",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.1",
