--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.3",
     "@react-spring/web": "^9.7.2",
     "antd": "^5.5.0",
     "axios": "^1.4.0",
