--- a/package.json
+++ b/package.json
@@ -17,12 +17,10 @@
     "daisyui": "^2.51.6",
     "mapbox-gl": "^2.15.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
-
-    "react-highlight-words": "^0.20.0",
-
     "react-fast-marquee": "^1.6.0",
-
+    "react-highlight-words": "^0.20.0",
     "react-hook-form": "^7.43.9",
     "react-map-gl": "^7.0.25",
     "react-query": "^3.39.3",
