--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-highlight-words": "^0.20.0",
